# awaitless

./: LICENSE  README.rst  awaitless.py  conftest.py  pyproject.toml  test.py
.github/workflows/: python-package.yml  python-publish.yml
awaitless/: __init__.py
