[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rfmux"
description = "Teach async and interactive ipython sessions how to get along"
authors = [
  {name="Graeme Smecher", email="gsmecher@t0.technology"},
]
readme='README.rst'
dependencies = [
  "aiohttp",
  "IPython",
  "pytest",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/gsmecher/awaitless"
repository = "https://github.com/gsmecher/awaitless"

[tool.setuptools]
packages = ["awaitless"]

[tool.setuptools_scm]
version_scheme = "only-version"
local_scheme = "no-local-version"
